--- a/.github/workflows/dockerhubdemov2.yaml
+++ b/.github/workflows/dockerhubdemov2.yaml
@@ -67,3 +67,7 @@ jobs:
             password: ${{secrets.DOCKERHUB_TOKEN}}
         - name: Build
           run:  docker build -f Dockerfile -t testapp .
+        - name: Tags
+          run: docker tag testapp:latest ${{secrets.DOCKERHUB_USERNAME}}/rpsintel2023:testappv1
+        - name: Push
+          run: docker push ${{secrets.DOCKERHUB_USERNAME}}/rpsintel2023:testappv1
